--- a/Mission_to_Mars_Challenge .ipynb
+++ b/Mission_to_Mars_Challenge .ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "b40d1ed1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mars_news():\n",
     "# Import Splinter and BeautifulSoup\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium import webdriver\n",
     "import pandas as pd"
    ]
   },
@@ -20,15 +20,7 @@
    "execution_count": 2,
    "id": "345f069b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - Downloading: 100%|█████████████████| 8.15M/8.15M [00:01<00:00, 7.77MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# executable path\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
@@ -82,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's Perseverance Rover 100 Days Out</div>"
+       "<div class=\"content_title\">NASA's Ingenuity Mars Helicopter Recharges Its Batteries in Flight</div>"
       ]
      },
      "execution_count": 5,
@@ -104,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "\"NASA's Perseverance Rover 100 Days Out\""
+       "\"NASA's Ingenuity Mars Helicopter Recharges Its Batteries in Flight\""
       ]
      },
      "execution_count": 6,
@@ -127,7 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Mark your calendars: The agency's latest rover has only about 8,640,000 seconds to go before it touches down on the Red Planet, becoming history's next Mars car.\""
+       "'Headed to the Red Planet with the Perseverance rover, the pioneering helicopter is powered up for the first time in interplanetary space as part of a systems check.'"
       ]
      },
      "execution_count": 7,
@@ -151,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "451839a7",
    "metadata": {},
    "outputs": [],
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "5c7ba771",
    "metadata": {},
    "outputs": [],
@@ -175,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "8c5a0040",
    "metadata": {},
    "outputs": [],
@@ -187,17 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "67b51cc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars2.jpg'"
+       "'image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,17 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "d729e278",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "14b7eb70",
    "metadata": {},
    "outputs": [
@@ -319,7 +311,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "fbf2045d",
    "metadata": {},
    "outputs": [
@@ -345,7 +337,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,18 +348,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "c3050332",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff9770fc",
+   "metadata": {},
+   "source": [
+    "# D1: Scrape High-Resolution Mars’ Hemisphere Images and Titles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9c45a52",
+   "metadata": {},
+   "source": [
+    "### Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0b136a5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Use browser to visit the URL \n",
+    "url = 'https://marshemispheres.com/'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1198f819",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Create a list to hold the images and titles.\n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "html = browser.html\n",
+    "image_soup = soup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a250b86a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemisphere_image = image_soup.find_all('div', class_= 'item')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "63e63b14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'image_url': 'https://marshemispheres.com/cerberus.html', 'title': 'Cerberus Hemisphere Enhanced'}\n",
+      "{'image_url': 'https://marshemispheres.com/cerberus.html', 'title': 'Cerberus Hemisphere Enhanced'}\n",
+      "{'image_url': 'https://marshemispheres.com/cerberus.html', 'title': 'Cerberus Hemisphere Enhanced'}\n",
+      "{'image_url': 'https://marshemispheres.com/cerberus.html', 'title': 'Cerberus Hemisphere Enhanced'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for image_url in hemisphere_image:\n",
+    "    \n",
+    "    hemis_dict = {}\n",
+    "    \n",
+    "    \n",
+    "    link = image_url.find('a', class_=\"itemLink product-item\")['href']\n",
+    "    \n",
+    "    title = image_url.find('h3').text\n",
+    "    \n",
+    "    \n",
+    "    image_url = url + link\n",
+    "    \n",
+    "    #print(link)\n",
+    "    \n",
+    "    \n",
+    "   # print(title)\n",
+    "    \n",
+    "   # print(image_url)\n",
+    "    \n",
+    "    \n",
+    "    hemis_dict['image_url'] = image_url\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    hemis_dict['title'] = title\n",
+    "    \n",
+    "    \n",
+    "    print(hemis_dict)\n",
+    "    \n",
+    "    \n",
+    "    hemisphere_image_urls.append(hemis_dict)\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e9b98167",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'image_url': 'https://marshemispheres.com/cerberus.html',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'image_url': 'https://marshemispheres.com/cerberus.html',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'image_url': 'https://marshemispheres.com/cerberus.html',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'image_url': 'https://marshemispheres.com/cerberus.html',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'}]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. Print the list that holds the dictionary of each image url and title.\n",
+    "hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e2f7808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Quit the browser\n",
     "browser.quit()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b136a5d",
+   "id": "aedc2b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85979532",
    "metadata": {},
    "outputs": [],
    "source": []
